--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@react-native-community/hooks": "^2.6.0",
     "expo": "~40.0.0",
-    "expo-constants": "^10.0.1",
+    "expo-constants": "~9.3.3",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
